--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,24 @@
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/impara-giocando?createDatabaseIfNotExist=true&verifyServerCertificate=false&allowPublicKeyRetrieval=true&useSSL=false&requireSSL=false
+#spring.datasource.username=supun
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.jpa.show-sql=true
+#create
+#none
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#upload
+multipart.enabled=true
+#spring.servlet.multipart.location=${java.io.tmpdir}
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+spring.servlet.multipart.resolve-lazily=true
+
 spring.application.name=impara-giocando
 spring.thymeleaf.cache=false
-
 server.port=8090
